--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.15"
+  },
+  "devDependencies": {
+    "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.149",
-    "lodash": "^4.17.15",
+    "jest": "^25.3.0",
+    "ts-jest": "^25.4.0",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
-  },
-  "devDependencies": {
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
     "start": "webpack-dev-server --open",
     "build": "webpack",
     "watch": "webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --config=jest.config.js"
   },
   "repository": {
     "type": "git",
